# GraphWalkerEditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/cmake/modules/: FindGraphViz.cmake
src/main/c++/: main.cpp
src/main/c++/graphwalker/: GraphWalker.cpp  GraphWalker.h
src/main/c++/gui/: EdgeItem.cpp  EdgeItem.h  GraphWalkerScene.cpp  GraphWalkerScene.h  GraphWalkerWidget.cpp  GraphWalkerWidget.h  GraphicItem.cpp  GraphicItem.h  LabelItem.cpp  LabelItem.h  MainWindow.cpp  MainWindow.h  QGVCore.cpp  QGVCore.h  QGVEdge.cpp  QGVEdge.h  QGVNode.cpp  QGVNode.h  QGVScene.cpp  QGVScene.h  VertexItem.cpp  VertexItem.h
src/main/c++/ogdf/: Layout.cpp  Layout.h
src/main/resources/: gwe.qrc
src/test/c++/: graphml.cpp  ogdf.cpp
src/test/resources/: Login-layout.gml  Login.gml  Login.graphml  acyclic_random_graph.gml  bigGraph.graphml  boost_write_example.graphml  er-diagram-layout.gml  unix-history-layout.gml
